started moving output to an nginx host container instead

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
 version: '3.4'
 
 services:
-  dickwettstone_com:
-    image: jojomi/hugo
-    networks:
-      - net
+  host:
+    image: jlind/wettstone-host
+    build:
+      context: ./
+    # networks:
+    #   - net
     environment:
-      HUGO_THEME: coder
-      HUGO_BASEURL: dickwettstone.com
       VIRTUAL_HOST: $DOMAIN
-      VIRTUAL_PORT: 443
-      HUGO_WATCH: 'true'
-    volumes:
-      - ./site/:/src
-      - ./output/:/output
-    expose:
-      - 443
-    command: ["/run.sh", "-p", "443"]
+      VIRTUAL_PORT: 80
+    # volumes:
+    #   - ./output/:/usr/share/nginx/html:ro
+    ports:
+      - 80:80
 
-networks:
-  net:
-    external:
-      name: infrastructure_net
+# networks:
+#   net:
+#     external:
+#       name: infrastructure_net
