--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,17 @@ services:
     image: jlind/wettstone-host
     build:
       context: ./
-    # networks:
-    #   - net
+    networks:
+      - net
     environment:
       VIRTUAL_HOST: $DOMAIN
       VIRTUAL_PORT: 80
     # volumes:
     #   - ./output/:/usr/share/nginx/html:ro
-    ports:
-      - 80:80
+    # ports:
+    #   - 80:80
 
-# networks:
-#   net:
-#     external:
-#       name: infrastructure_net
+networks:
+  net:
+    external:
+      name: docker-reverse-proxy_net
