Added redirect for old domain Permanently moved dickwettstone.com to richardwettstone.com using an alpine container to redirect traffic permanently for both http and https requests

--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -8,3 +8,8 @@ services:
     environment:
       LETSENCRYPT_HOST: $DOMAIN
       LETSENCRYPT_EMAIL: $WEBMASTER_EMAIL
+  
+  dickwettstone-host:
+    environment:
+      LETSENCRYPT_HOST: $OLD_DOMAIN
+      LETSENCRYPT_EMAIL: $WEBMASTER_EMAIL
