Added https into docker-compose baseurl definition because development should also be using https anyway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./
       args:
-        baseurl: http://$DOMAIN
+        baseurl: https://$DOMAIN
     networks:
       - net
     environment:
